--- a/index.html
+++ b/index.html
@@ -39,6 +39,54 @@
     animation: cursor .8s infinite, typing 20s steps(14) infinite;
 }
 
+.meow {
+  --s: 25px;
+  --g :5px;  
+  
+  width: calc(3*(1.353*var(--s) + var(--g)));
+  aspect-ratio: 3;
+  background:
+    linear-gradient(#ff1818 0 0) left/33% 100% no-repeat,
+    conic-gradient(from -90deg at var(--s) calc(0.353*var(--s)),
+      #fff 135deg,#666 0 270deg,#aaa 0); 
+  background-blend-mode: multiply;
+  --_m:
+    linear-gradient(to bottom right,
+       #0000 calc(0.25*var(--s)),#000 0 calc(100% - calc(0.25*var(--s)) - 1.414*var(--g)),#0000 0),
+    conic-gradient(from -90deg at right var(--g) bottom var(--g),#000 90deg,#0000 0);
+  -webkit-mask: var(--_m);
+          mask: var(--_m);
+  background-size:   calc(100%/3) 100%;
+  -webkit-mask-size: calc(100%/3) 100%;
+          mask-size: calc(100%/3) 100%;
+  -webkit-mask-composite: source-in;
+          mask-composite: intersect;
+  animation: l7 steps(3) 1.5s infinite;
+}
+@keyframes l7 {
+  to {background-position: 150% 0%}
+}
+.cat {
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: 
+    radial-gradient(farthest-side,#ffa516 94%,#0000) top/8px 8px no-repeat,
+    conic-gradient(#0000 30%,#ffa516);
+  -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+  animation: l13 1s infinite linear;
+}
+@keyframes l13{ 
+  100%{transform: rotate(1turn)}
+}
+
+@keyframes l6{
+  0%  {transform:translate(0,0)}
+  25% {transform:translate(30px,0)}
+  50% {transform:translate(30px,30px)}
+  75% {transform:translate(0,30px)}
+  100%{transform:translate(0,0)}
+}
 @keyframes cursor {
     to{
         border-left: 3px solid #ff7f5000;
@@ -114,11 +162,13 @@
   <div class="hero-overlay bg-white bg-opacity-[0%]"></div>
   <div class="hero-content -mt-[80%] text-neutral-700 text-left lg:-ml-[50%]">
     <div class="max-w-md lg:mt-[220%]">
+      <div class="meow block lg:hidden"></div>
       <h1 class="mb-5 text-2xl block bg-white font-bold lg:hidden"> <span class="lg:text-6xl">Pamper Your Pet, <br> Because They Deserve the Bes</span> </h1>
+      <div class="meow hidden lg:block"></div>
       <h1 class="mb-5 text-2xl hidden bg-white font-bold lg:block w-[600px]"> <span class="lg:text-6xl">Pamper Your Pet, <br> Because They Deserve <br> the Bes</span> </h1>
       <!----Dot----->
       <div class="bg-white animated-meow">
-        I'm a <span class="h-10"></span>
+        I'm a <span class="h-10"></span><div class="float-right mb-5 cat"></div>
     </div>
       <!-----End dot---->
       <p class="md-7 text-[14px] lg:text-xl">
@@ -250,7 +300,7 @@
           <div class="hero w-full">
             <div class="hero-content flex-row">
               <div>
-                <div class="card rounded-none bg-base-100 w-45 shadow-xl lg:w-60">
+                <div class="card rounded-none bg-base-100 w-42 shadow-xl lg:w-60">
                   <div class="card-body bg-white flex-row h-24 items-start">
                     <img src="assest/image/cat-cartoon.png" class="w-10 rounded-full" alt="" srcset="">
                     <p class="-mt-6"><i class="las la-star text-[#ffc107]"></i> 5.5 <br>Pet Bed<br>$39.99</p>
@@ -258,7 +308,7 @@
                 </div>
               </div>
               <div>
-                <div class="card rounded-none bg-white w-45  shadow-xl lg:w-60">
+                <div class="card rounded-none bg-white w-42  shadow-xl lg:w-60">
                   <div class="card-body flex-row h-24 items-start">
                     <img src="assest/image/rabbit-cartoon.png" class="w-10 rounded-full" alt="" srcset="">
                     <p class="-mt-6"><i class="las la-star text-[#ffc107]"></i> 5.5 <br>Pet Bed<br>$39.99</p>
@@ -266,7 +316,7 @@
                 </div>
               </div>
               <div class="hidden lg:block">
-                <div class="card rounded-none bg-white w-45  shadow-xl lg:w-60">
+                <div class="card rounded-none bg-white w-42  shadow-xl lg:w-60">
                   <div class="card-body flex-row h-24 items-start">
                     <img src="assest/image/bird-cartoon.png" class="w-10 rounded-full" alt="" srcset="">
                     <p class="-mt-6"><i class="las la-star text-[#ffc107]"></i> 5.5 <br>Pet Bed<br>$39.99</p>
@@ -278,7 +328,7 @@
           <div class="hero w-full -mt-2">
             <div class="hero-content flex-row">
               <div>
-                <div class="card rounded-none bg-white w-45  shadow-xl lg:w-60">
+                <div class="card rounded-none bg-white w-42  shadow-xl lg:w-60">
                   <div class="card-body flex-row h-24 items-start">
                     <img src="assest/image/dog-cartoon.png" class="w-10 rounded-full" alt="" srcset="">
                     <p class="-mt-6"><i class="las la-star text-[#ffc107]"></i> 5.5 <br>Pet Bed<br>$39.99</p>
@@ -286,7 +336,7 @@
                 </div>
               </div>
               <div>
-                <div class="card rounded-none bg-white w-45 shadow-xl lg:w-60">
+                <div class="card rounded-none bg-white w-42 shadow-xl lg:w-60">
                   <div class="card-body flex-row h-24 items-start">
                     <img src="assest/image/fish-cartoon.png" class="w-10 rounded-full" alt="" srcset="">
                     <p class="-mt-6"><i class="las la-star text-[#ffc107]"></i> 5.5 <br>Pet Bed<br>$39.99</p>
@@ -294,7 +344,7 @@
                 </div>
               </div>
               <div class="hidden lg:block">
-                <div class="card rounded-none bg-white w-45  shadow-xl lg:w-60">
+                <div class="card rounded-none bg-white w-42  shadow-xl lg:w-60">
                   <div class="card-body flex-row h-24 items-start">
                     <img src="assest/image/rabbit-cartoon.png" class="w-10 rounded-full" alt="" srcset="">
                     <p class="-mt-6"><i class="las la-star text-[#ffc107]"></i> 5.5 <br>Pet Bed<br>$39.99</p>
@@ -306,7 +356,7 @@
           <div class="hero w-full -mt-2">
             <div class="hero-content flex-row">
               <div>
-                <div class="card rounded-none bg-white w-45 shadow-xl lg:w-60">
+                <div class="card rounded-none bg-white w-42 shadow-xl lg:w-60">
                   <div class="card-body flex-row h-24 items-start">
                     <img src="assest/image/pet-couch.png" class="w-10 rounded-full" alt="" srcset="">
                     <p class="-mt-6"><i class="las la-star text-[#ffc107]"></i> 5.5 <br>Pet Bed<br>$39.99</p>
@@ -314,7 +364,7 @@
                 </div>
               </div>
               <div>
-                <div class="card rounded-none bg-white w-45  shadow-xl lg:w-60">
+                <div class="card rounded-none bg-white w-42  shadow-xl lg:w-60">
                   <div class="card-body flex-row h-24 items-start">
                     <img src="assest/image/mouse-cartoon.png" class="w-10 rounded-full" alt="" srcset="">
                     <p class="-mt-6"><i class="las la-star text-[#ffc107]"></i> 5.5 <br>Pet Bed<br>$39.99</p>
@@ -322,7 +372,7 @@
                 </div>
               </div>
               <div class="hidden lg:block">
-                <div class="card rounded-none bg-white w-45 shadow-xl lg:w-60">
+                <div class="card rounded-none bg-white w-42 shadow-xl lg:w-60">
                   <div class="card-body flex-row h-24 items-start">
                     <img src="assest/image/bird-cartoon.png" class="w-10 rounded-full" alt="" srcset="">
                     <p class="-mt-6"><i class="las la-star text-[#ffc107]"></i> 5.5 <br>Pet Bed<br>$39.99</p>
@@ -334,7 +384,7 @@
           <div class="hero w-full -mt-2 block lg:hidden">
             <div class="hero-content flex-row">
               <div>
-                <div class="card rounded-none bg-white w-45 shadow-xl lg:w-60">
+                <div class="card rounded-none bg-white w-42 shadow-xl lg:w-60">
                   <div class="card-body flex-row h-24 items-start">
                     <img src="assest/image/cat-cartoon.png" class="w-10 rounded-full" alt="" srcset="">
                     <p class="-mt-6"><i class="las la-star text-[#ffc107]"></i> 5.5 <br>Pet Bed<br>$39.99</p>
@@ -342,7 +392,7 @@
                 </div>
               </div>
               <div>
-                <div class="card rounded-none bg-white w-45 shadow-xl lg:w-60">
+                <div class="card rounded-none bg-white w-42 shadow-xl lg:w-60">
                   <div class="card-body flex-row h-24 items-start">
                     <img src="assest/image/rabbit-cartoon.png" class="w-10 rounded-full" alt="" srcset="">
                     <p class="-mt-6"><i class="las la-star text-[#ffc107]"></i> 5.5 <br>Pet Bed<br>$39.99</p>
@@ -350,7 +400,7 @@
                 </div>
               </div>
               <div class="hidden lg:block">
-                <div class="card rounded-none bg-white w-45  shadow-xl lg:w-60">
+                <div class="card rounded-none bg-white w-42  shadow-xl lg:w-60">
                   <div class="card-body flex-row h-24 items-start">
                     <img src="assest/image/rabbit-cartoon.png" class="w-10 rounded-full" alt="" srcset="">
                     <p class="-mt-6"><i class="las la-star text-[#ffc107]"></i> 5.5 <br>Pet Bed<br>$39.99</p>
