--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   width: calc(3*(1.353*var(--s) + var(--g)));
   aspect-ratio: 3;
   background:
-    linear-gradient(#ff1818 0 0) left/33% 100% no-repeat,
+    linear-gradient(#ffc107 0 0) left/33% 100% no-repeat,
     conic-gradient(from -90deg at var(--s) calc(0.353*var(--s)),
       #fff 135deg,#666 0 270deg,#aaa 0); 
   background-blend-mode: multiply;
